--- a/food-blog-app/backend/package.json
+++ b/food-blog-app/backend/package.json
@@ -15,8 +15,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.2",
-    "multer": "^2.0.2",
-    "react-icons": "^5.5.0"
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
