--- a/food-blog-app/backend/.env
+++ b/food-blog-app/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-CONNECTION_STRING="mongodb://localhost:27017/foodRecipe"
+CONNECTION_STRING="mongodb+srv://Mano:Mano@0504@cluster2.ozwdyna.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2"
 SECRET_KEY="MANO0504"
