--- a/food-blog-app/backend/.env
+++ b/food-blog-app/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-CONNECTION_STRING="mongodb+srv://Mano:Mano@0504@cluster2.ozwdyna.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2"
+MONGODB_URI="mongodb+srv://Mano:Mano@0504@cluster2.ozwdyna.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2"
 SECRET_KEY="MANO0504"
