--- a/food-blog-app/backend/.env
+++ b/food-blog-app/backend/.env
@@ -1,4 +1,3 @@
 PORT=5000
-MONGODB_URI="mongodb+srv://Mano:Mano%400504@cluster2.ozwdyna.mongodb.net/?retryWrites=true&w=majority&appName=Cluster2"
-
+CONNECTION_STRING="mongodb://localhost:27017/foodRecipe"
 SECRET_KEY="MANO0504"
