--- a/food-blog-app/backend/package.json
+++ b/food-blog-app/backend/package.json
@@ -6,10 +6,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["food", "blog", "api", "backend"],
-  "author": "Mano",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "description": "Backend API for Food Blog App",
+  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
